Autoformat of server/main. No manual fixes